# aws-iam-least-privilege-analyzer

./: .gitignore  FIXES_APPLIED.md  LICENSE  README.md  SECURITY.md  push_to_github.bat  pyproject.toml  requirements-dev.txt  safety-results.json
.github/workflows/: ci.yml  security.yml
runbooks/: remediation-guide.md
src/: __init__.py  lambda_handler.py
src/analyzer/: __init__.py  crawler.py
src/integrations/: security_hub.py
src/remediation/: __init__.py  policy_generator.py
src/scoring/: __init__.py  escalation_paths.py  risk_scorer.py
terraform/environments/prod/: main.tf  terraform.tfvars.example  variables.tf
terraform/modules/member-role/: main.tf
tests/unit/: test_escalation_paths.py
