[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-iam-least-privilege-analyzer"
version = "1.0.0"
description = "Continuous IAM policy analysis across AWS Organizations with risk scoring and privilege escalation detection"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "aws-iam-least-privilege-analyzer contributors"}
]
keywords = ["aws", "iam", "security", "least-privilege", "cloudtrail"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "boto3>=1.34.0",
    "botocore>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "moto[iam,s3,dynamodb,secretsmanager,sts,organizations]>=5.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "boto3-stubs[iam,s3,dynamodb,organizations,securityhub,cloudtrail,accessanalyzer,scheduler,sns,sqs,kms]",
    "bandit>=1.7.8",
    "safety>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/master-coder1998/aws-iam-least-privilege-analyzer"
Repository = "https://github.com/master-coder1998/aws-iam-least-privilege-analyzer"
Issues = "https://github.com/master-coder1998/aws-iam-least-privilege-analyzer/issues"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "DTZ", "T10", "ISC", "ICN", "PIE", "PT", "Q", "RSE", "RET", "SIM", "TID", "ARG", "PLE", "PLW", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
